Fix T78306: Weight Transfer Operator target mesh doesn't update when transforming bones.

Data transfer operator was missing tagging DEG for relations updates.

Should be portable to 2.83 as well.